// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsAPIKeyDialog > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: API key"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            filled="true"
            grow="false"
            hint="Name"
            maxlength="200"
            modelvalue=""
            placeholder="Name"
            rules="v => !!v || _ctx.$t('Name')"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Key rights
        </div>
        <!--v-if-->
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Key rights"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object]"
          itemsecondarytext=""
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="false"
          numericorderby="false"
          placeholder="Key rights"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
        <!--v-if-->
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Create"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAPIKeyDialog > renders correctly for FACTORY_ADMIN 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: API key"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            filled="true"
            grow="false"
            hint="Name"
            maxlength="200"
            modelvalue=""
            placeholder="Name"
            rules="v => !!v || _ctx.$t('Name')"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Key rights
        </div>
        <!--v-if-->
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          disabled="true"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Key rights"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object]"
          itemsecondarytext=""
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="true"
          numericorderby="false"
          placeholder="Key rights"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          disabled="true"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="false"
          hint="User"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object]"
          itemsecondarytext="userRoles"
          itemtertiarytext=""
          itemtext="fullName"
          itemvalue="username"
          loading="false"
          menuinputclass="mt-4"
          menuinputtype="primary"
          modelvalue="current@user"
          numericorderby="false"
          placeholder="Name"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Create"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAPIKeyDialog > renders correctly if users selection is visible 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: API key"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <evocon-v-input-stub
            filled="true"
            grow="false"
            hint="Name"
            maxlength="200"
            modelvalue=""
            placeholder="Name"
            rules="v => !!v || _ctx.$t('Name')"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Key rights
        </div>
        <!--v-if-->
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Key rights"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object]"
          itemsecondarytext=""
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="true"
          numericorderby="false"
          placeholder="Key rights"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="false"
          hint="User"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object],[object Object]"
          itemsecondarytext="userRoles"
          itemtertiarytext=""
          itemtext="fullName"
          itemvalue="username"
          loading="false"
          menuinputclass="mt-4"
          menuinputtype="primary"
          modelvalue=""
          numericorderby="false"
          placeholder="Name"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Create"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
